# tycho-explorer

./: .env.dev.example  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  debug-production.sh  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: production-deployment.yaml
.helm/frontend/: Chart.yaml  values.yaml
.helm/tycho-api/: Chart.yaml  values.yaml
api/: .dockerignore  .env  .env.example  Cargo.toml  Dockerfile  Dockerfile.dev  README.md
api/src/: main.rs
api/src/api/: health.rs  mod.rs  routes.rs  ws.rs
api/src/errors/: mod.rs
api/src/simulation/: mod.rs  state.rs
api/src/utils/: mod.rs  setup.rs
docs/: activeContext.md  development.md  docker-architecture.md  docker-deployment.md  filter-architecture.md  git-history-migration.md  list-ui-refactor.md  listview-logo-style-plan.md  progress.md  simulation-api-fix-plan.md  specification.md  systemPatterns.md
docs/memory-bank/: coingecko-proxy-plan.md  projectbrief.md  systemPatterns.md  techContext.md
frontend/: .clinerules  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dev  README.md  bun.lockb  docker-compose-example.yaml  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  start-prod.sh  start.sh  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/.aider.tags.cache.v4/: cache.db
frontend/.clinerules/: guidelines.md
frontend/docs/: specification.md
frontend/memory-bank/: activeContext.md  dockerization-plan.md  (+10 more)
gitbook/: README.md  SUMMARY.md  architecture.md  deploy.md  tycho-api (1).md  tycho-api.md
(+185 files in other folders)
